# nav2_waypoint_follower_wsl

./: CMakeLists.txt  README.md  package.xml
src/: singlePoint_publisher.cpp  waypoint_publisher.cpp
